# playground

./: RBDynTest  RBDynTest.cc  a.tex  const_danger  const_danger.cc  foo  foo.cpp  fort.9  friend  friend.cpp  main.cc  makeSharedTemplate.cc  recursive_function.cpp  statisticsLeaningOnSphereParameterizedWrist.cc  statisticsLeaningOnSpherePlanWrist.cc  test.cpp
address/: foo  foo.cpp
assert/: foo  foo.cpp
barProject/: bar  bar.cpp
binaryEnum/: foo  foo.cc
boosttest/: foo  foo.cc
colorOutput/: foo  foo.cc
doubleTemplate/: foo  foo.cc
eigenMap/: foo  foo.cc
eigenRef/: foo  foo.cc
eigenTest/: foo  foo.cc  main.cpp  ref81.cc  test
enums/: foo  foo.cc
exception/: foo.cc
exos/RotateMatrix/: foo  main.cc
exos/URLify/: foo  main.cc
exos/checkPermutation/: foo  main.cc
exos/isUnique/: foo  main.cc
helloWorld/: foo  foo.cc
heritageIdentity/: heritageIdentity  main.cpp
heritageVirtual/: foo.cc
imaginaryNumber/: foo  main.cpp
inertiaStuffForStan/: main.py  plotE3Sol.py
insert/: foo  foo.cpp
lambda/: foo  foo.cc
make_pair/: foo  foo.cc
makefileTests/: .clang-format  Makefile
makefileTests/src/: HelloWorld.cc
makefileTuto/: hellofunc.c  hellomake.c  makefile
mapDefault/: foo  foo.cc
mayavi/: animCube.py  animation.py
ostream/: foo  foo.cc
parseemail/: list.txt
passingReferences/: foo  foo.cc
permutation/: foo  foo.cc
priceChartChampDeLEtoile/: plot.py
printToFile/: foo  foo.cc  textFile.txt
pythonParse/: entry.txt  parser.py
pythonRemoveStringFromFile/: removeStringFromFile.py
pythonRemoveStringFromFile/cleanFiles/: file1.yml  file2.yml
pythonRemoveStringFromFile/files/: file0.yml  file2.yml
pythonVisualization/: entry.yml  main.py  plotBox.py
rtti/: rtti  rtti.cpp
sharedPtrInStatic/: main.cpp
streamPrintArgument/: foo  foo.cc
sympytest/: foo.py
test/: CMakeLists.txt  foo.cpp
testCamille/: foo  foo.cc
testHeritageInVector/: foo  foo.cc
testNestedDerived/: A.hh  B.hh  main.cpp  testNestedDerived
testSanitize/: foo.cc
testYaml/: CMakeLists.txt
testYaml/share/: config.yaml
testYaml/src/: CMakeLists.txt  main.cpp
testYaml/tests/: CMakeLists.txt
tikzTest/: main.tex
uniqueToSharedPtr/: foo  foo.cpp
